2154 - Fix header alignment for rtl and ie11 with application menu

--- a/src/components/applicationmenu/_applicationmenu.scss
+++ b/src/components/applicationmenu/_applicationmenu.scss
@@ -560,6 +560,13 @@ html[dir='rtl'] {
 
   }
 
+  &.ie11 {
+    .application-menu {
+      + .page-container {
+        right: auto;
+      }
+    }
+  }
 }
 
 // On large + extra-large breakpoints, the .page-content element will shift to the left while the menu is open
